--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Sign-up Form</title>
 </head>
+
 <body>
-    
+    <div class="image">
+        <img src="/assets/background.jpg" alt="Background Image">
+        <div class="odin-logo">
+            <img src="assets/odin.svg" alt="Odin">
+            <span>ODIN</span>
+        </div>
+        <div class="credits">
+            <span>Photo by <a href="#">Halie West</a> on <a href="#">Unsplash</a></span>
+        </div>
+    </div>
+
+    <div class="signup">
+
+    </div>
 </body>
+
 </html>
