Fix background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="image">
-        <img src="/assets/background.jpg" alt="Background Image">
+        <img src="assets/background.jpg" alt="Background Image">
         <div class="odin-logo">
             <img src="assets/odin.svg" alt="Odin">
             <span>ODIN</span>
